--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <a href="#">Privacy</a>
         </div>
         <p class="copyright">Netflix Clone © 2026</p>
+        <p>Made By Aditya Vardhan Pandey</p>
     </footer>
 
 </body>
